# qfengine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  README_DEPS.txt  dllcopy.windows.x32.sh  dllcopy.windows.x64.sh  package.windows.x32.sh  package.windows.x64.sh  thirdpartylegalnotices.txt
data/: imgui.ini
data/engine/: qfengine.conf
docs/: index.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  assert.hh  cmdline.cc  cmdline.hh  config.cc  config.hh  constexpr.hh  crc64.cc  crc64.hh  epoch.cc  epoch.hh  exception.cc  exception.hh  feature.hh.in  floathacks.hh  logging.cc  logging.hh  matrix4x4base.hh  matrix4x4f.cc  matrix4x4f.hh  precompiled.hh  rwbuffer.cc  rwbuffer.hh  strtools.cc  strtools.hh  vector2base.hh  vector2f.cc  vector2f.hh  vector3angles.cc  vector3angles.hh  vector3base.hh  vector3f.cc  vector3f.hh  vector4base.hh  vector4f.hh  version.hh.in
src/game/client/: CMakeLists.txt  display.cc  display.hh  game.cc  game.hh  globals.cc  globals.hh  input.cc  input.hh  main.cc  precompiled.hh  refresher.cc  refresher.hh  render_api.cc  render_api.hh  video_mode.hh
src/game/client/opengl/: gl_init.cc  gl_level.cc  gl_main.cc  opengl.cc  opengl.hh  opengl_imgui.cc  opengl_level.cc  opengl_video.cc  ref_opengl.hh
src/game/shared/: CMakeLists.txt  const.hh  content.cc  content.hh  game.cc  game.hh  globals.cc  globals.hh  input.hh  precompiled.hh
